# sentiment-analysis-ml-project

./: .gitignore  .pre-commit-config.yaml  Data.dvc  README.md  artifacts.dvc  commands.py  pyproject.toml
conf/: config.yaml
conf/convert/: convert.yaml
conf/data_loading/: data_loading.yaml
conf/environment/: environment.yaml
conf/inference/: inference.yaml
conf/logging/: logging.yaml
conf/model/: linear.yaml  rnn.yaml
conf/training/: training.yaml
project/my_modules/: data.py  infer.py  linear_model.py  model_wrapper.py  rnn_model.py  test.py  train.py
scripts/: convert_to_tensorrt.py  download_data.py
